# agentic-memories

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_direct_memories.py  example_pydantic_ai_memories.py  example_with_skill.py
memories/: README.md
memories/default/: MEMORY.md
skills/memories/: README.md  SKILL.md
skills/memories/scripts/: skill_entry.py
src/agentic_memories/: __init__.py  invoke.py  manifest.py  models.py  registry.py  schema.py  smoke.py  triage.py
tests/: test_core.py
